assets/style.css
:root{
    background-color: #ae86b5;
}

li{
    padding-bottom: 1px;
    color: floralwhite;
    text-shadow: 1.5px 1px 3px black;
    list-style-type: none;
}

p{
    color: black;
    text-align: center;
    font-size: larger;
    font-family: 'Times New Roman', Times, serif;
}
h2{
    font-family: 'Times New Roman', Times, serif;
    margin-top: -.5rem;
}
input{
    text-align: center;
}

.container {
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 80rem;
    margin: 0 auto;
   }

    button {
    display: inline-block;
    font-family: sans-serif;
    background-color: #52bca9;
    border-radius: 10px;
    border: 3px double #c09f9f;
    text-align: center;
    font-size: 15px;
    padding: 20px;
    width: 200px;
    margin-top: 3px;
  }

  button:hover{
      box-shadow: 4px 3px 6px #52bca9;
  }

  #startQuiz{
    display: flex;
    flex-direction: column;
    align-items: center;
  }

#timer{
    font-family:'Times New Roman', Times, serif;
    background-color: #ae86b5;
    color: #52bca9;
    font-size: larger;
    text-align: center;
}

#quiz {
    display: none;
}

#results {
    display: none;
}

#gameOver {
    text-align: center;
    display: none;
    flex-direction: column;
    align-items: center;
}

#highScore{
 height: 1.5rem;
 border:groove 2px;
}

#high-score{
    display: none;
    width: 50%;
    border: solid;
    border-color: #52bca9;
    border-bottom-style: groove;
    padding-bottom: .3rem;
    background: aquamarine;
}

#highscore-header{
    display:flex;
    justify-content: space-around;
    border-bottom-style: outset;
    margin-bottom: .5rem;
    background-color: #52bca9;
    font-family: 'Times New Roman', Times, serif;
}

#highscoreContainer{
    height: 100%;
    width: 100%;
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: center;
} 

#name{
    margin: .5rem;
    height: 1.75rem;
}

#highscoreNameInput{
    display: inline-block;
    padding-left: 9.5rem;
    font-family: 'Times New Roman', Times, serif;
    font-weight: bold;
}

#highScore-score{
    float: right;
    padding-right: 8.75rem;
    font-family: 'Times New Roman', Times, serif;
    font-weight: bold;
}

#finalScore{
    padding-bottom: 0.5rem;
    font-size: larger;
    font-family: 'Times New Roman', Times, serif;
    font-weight: bold;
}

#endGameButton{
    display: none;
}

